--- a/wrr/index.html
+++ b/wrr/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="aboutme/images/logo.png" alt="Dry Oar Logo">
+            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -21,7 +21,7 @@
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="aboutme/images/hero.png" alt="People enjoying white water rafting">
+            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
@@ -33,13 +33,13 @@
     </div>
     <main class="home-grid">
         <section class="rivers-card">
-            <img class="card-img" src="aboutme\images\rivers.jpg" alt="river in forest">
+            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon">
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-            <img class="card-img" src="aboutme/images/camping.jpg"alt="tent in mountains">
-            <img class="icon" src="wrr/images/fire_icon.png" alt="fire icon">
+            <img class="card-img" src="images/camping.jpg"alt="tent in mountains">
+            <img class="icon" src="images/fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
         <section class="rapids-card">
@@ -56,7 +56,7 @@
     </main>
 
     <footer>
-        <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
+        <p>Dry Oar &copy; 2023 - Jared Serrao</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
